--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,57 +4,10 @@
 
         <h1>Search for an NYC apartment building:</h1>
 
-        <div id="aptsearch">
-            <input class="typeahead" type="text" placeholder="Address">
-        </div>
+        <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
+    @*<div id="mapbox" style="width: 600px; height: 600px; margin-left: auto; margin-right: auto; border: 2px solid; border-radius: 5px; padding: 10px">*@
+            @*<div id="map-canvas" style="width: 100%; height: 100%"></div>*@
+        @*</div>*@
 
-        <script>
-
-            var substringMatcher = function(strs) {
-              return function findMatches(q, cb) {
-                var matches, substringRegex;
-
-                // an array that will be populated with substring matches
-                matches = [];
-
-                // regex used to determine if a string contains the substring `q`
-                substrRegex = new RegExp(q, 'i');
-
-                // iterate through the pool of strings and for any string that
-                // contains the substring `q`, add it to the `matches` array
-                $.each(strs, function(i, str) {
-                  if (substrRegex.test(str)) {
-                    // the typeahead jQuery plugin expects suggestions to a
-                    // JavaScript object, refer to typeahead docs for more info
-                    matches.push({ value: str });
-                  }
-                });
-
-                cb(matches);
-              };
-            };
-
-            var states = ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
-              'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
-              'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
-              'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
-              'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
-              'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
-              'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
-              'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
-              'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
-            ];
-
-            $('#the-basics .typeahead').typeahead({
-              hint: true,
-              highlight: true,
-              minLength: 1
-            },
-            {
-              name: 'states',
-              displayKey: 'value',
-              source: substringMatcher(states)
-            });
-
-        </script>
+        <script src="@routes.Assets.at("javascripts/index.js")" type="text/javascript"></script>
     }
