--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,18 @@
-@(title: String)(content: Html)
+@(title: String, scalable: Boolean = true)(content: Html)
 
 <!DOCTYPE html>
 
 <html>
     <head>
         <title>@title</title>
+        @if(scalable) {
+            <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+        }
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.2/typeahead.bundle.min.js" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
+        @*<script src="//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.10.2/typeahead.bundle.min.js" type="text/javascript"></script>*@
+        <script src="//maps.googleapis.com/maps/api/js?sensor=true&libraries=places" type="text/javascript"></script>
     </head>
     <body>
 
