--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,6 +12,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script type="text/javascript" src="@routes.Application.jsRoutes"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" type="text/javascript"></script>
         <script src="//maps.googleapis.com/maps/api/js?sensor=true&libraries=places&key=@Application.googleApiKey" type="text/javascript"></script>
     </head>
     <body>
