--- a/app/views/noise.scala.html
+++ b/app/views/noise.scala.html
@@ -1,7 +1,7 @@
 @(complaints: Seq[ThreeOneOneCall])
 @import org.joda.time.format.DateTimeFormat
 
-<table border="1">
+<table class="table table-condensed table-bordered table-responsive">
     <thead>
         <tr>
             <th>Distance (ft)</th>
