--- a/app/views/info.scala.html
+++ b/app/views/info.scala.html
@@ -1,6 +1,6 @@
 @(placeDetails: GooglePlace, sources: Seq[SubInfoFormatter[_]])
 
-@main(title = s"Slumbot - ${placeDetails.name}") {
+@main(title = s"Slumbot - ${placeDetails.name}", jsFile = "info.js") {
 
     <h1>Info for @placeDetails.name</h1>
 
@@ -21,5 +21,4 @@
     <script>
         var placeRef = "@placeDetails.placeRef";
     </script>
-    <script src="@routes.Assets.at("javascripts/info.js")" type="text/javascript"></script>
 }
