--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,29 +1,48 @@
-@(title: String, scalable: Boolean = true)(content: Html)
+@(title: String, jsFile: String = "")(content: Html)
 
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>@title</title>
-        @if(scalable) {
-            <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-        }
+
+
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+    </head>
+    <body>
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <h1><a href="@routes.IntroController.index()" style="color:inherit">slumbot</a></h1>
+                    <p class="lead">learn more about your New York City apartment building</p>
+                </div>
+            </div>
+
+            @content
+
+        </div>
+
+        <div id="footer">
+            <div class="container-fluid text-right text-muted">
+                <small><span class="glyphicon glyphicon-copyright-mark"></span> Eric Winer, 2014</small>
+            </div>
+        </div>
+
         <script type="text/javascript" src="@routes.Application.jsRoutes"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" type="text/javascript"></script>
         <script src="//maps.googleapis.com/maps/api/js?sensor=true&libraries=places&key=@Application.googleApiKey" type="text/javascript"></script>
-    </head>
-    <body>
-
-        <header>
-            <a href="@routes.IntroController.index">@title</a>
-        </header>
-
-        <section>
-            @content
-        </section>
-
+        <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+        @if(jsFile != "") {
+            <script src="@routes.Assets.at(s"javascripts/$jsFile")" type="text/javascript"></script>
+        }
     </body>
 </html>
