--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,49 +1,17 @@
-html, body {
-    padding: 0;
-    margin: 0;
-    font-family: Helvetica, Arial;
-    color: #3A4244;
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+    position: relative;
+    min-height: 100%;
 }
-
-header {
-    padding: 10px 30px;
-    background: #CAE7EC;
-    font-size: 24px;
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 20px;
 }
-
-header a {
-    color: #1A1E20;
-    text-decoration: none;
-}
-
-section {
-    padding: 10px 30px;
-}
-
-.controls {
-    margin-top: 16px;
-    border: 1px solid transparent;
-    border-radius: 2px 0 0 2px;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    height: 32px;
-    outline: none;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-}
-
-#pac-input {
-    background-color: #fff;
-    padding: 0 11px 0 13px;
-    width: 400px;
-    font-family: Roboto;
-    font-size: 15px;
-    font-weight: 300;
-    text-overflow: ellipsis;
-}
-
-#pac-input:focus {
-    border-color: #4d90fe;
-    margin-left: -1px;
-    padding-left: 14px;  /* Regular padding-left + 1. */
-    width: 401px;
+#footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    background-color: #f5f5f5;
 }
