analytics for violations & DOB complaints

--- a/app/views/info.scala.html
+++ b/app/views/info.scala.html
@@ -12,7 +12,7 @@
 
         @for(source <- sources) {
             <li class="source" data-source-slug="@source.slug">
-                <h5><strong>@source.name</strong>: @source.description</h5>
+                <h5><strong>@source.name</strong></h5>
                 <div class="sub-details"></div>
             </li>
         }
