--- a/app/views/noisedetail.scala.html
+++ b/app/views/noisedetail.scala.html
@@ -1,7 +1,7 @@
 @(complaints: Seq[ThreeOneOneCall])
 @import org.joda.time.format.DateTimeFormat
 
-<table class="table table-condensed table-bordered table-responsive">
+<table class="table table-condensed table-responsive">
     <thead>
         <tr>
             <th>Date</th>
