some simple request and error logging

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -20,7 +20,7 @@
 
             <div class="row">
                 <div class="col-xs-12">
-                    <h1><a href="@routes.IntroController.index()" style="color:inherit">slumbot</a></h1>
+                    <h1><a href="@routes.IntroController.index()?preview" style="color:inherit">slumbot</a></h1>
                     <p class="lead">learn more about your New York City apartment building</p>
                 </div>
             </div>
